# shipsy

./: CONTACT_ENRICHMENT_README.md  ERROR_HANDLING.md  README.md  Shipsy Assignment copy.xlsx  Shipsy Assignment.xlsx  company_results.json  company_revenue_analyzer.py  contact_enrichment.py  contact_results.json  enriched_sample_contacts.csv  enriched_sample_contacts.json  env.example  main.py  pyproject.toml  requirements.txt  sample_companies.csv  sample_companies_analyzed.csv  sample_companies_analyzed.json  sample_companies_analyzed_summary.txt  sample_contacts.csv  shipsy_code_meenakshi.json  test_contact_agent.py  test_error_handling.py
examples/: simple_chat.py
src/agents/: basic_agent.py  contact_agent.py  revenue_agent.py
src/config/: settings.py
src/processors/: contact_csv_processor.py  csv_processor.py  excel_company_processor.py
src/tools/: tier_assignment.py  web_search.py
